updated test, code and corrections made to apis
